[gd_scene load_steps=14 format=2]

[ext_resource path="res://nanogames/garden_thyme/main.gd" type="Script" id=1]
[ext_resource path="res://nanogames/garden_thyme/watering_can/watering_can.tscn" type="PackedScene" id=2]
[ext_resource path="res://nanogames/garden_thyme/flower/flower.tscn" type="PackedScene" id=3]
[ext_resource path="res://nanogames/garden_thyme/_assets/grass.png" type="Texture" id=4]
[ext_resource path="res://nanogames/garden_thyme/_assets/fence.png" type="Texture" id=5]
[ext_resource path="res://nanogames/garden_thyme/_assets/rocks.png" type="Texture" id=6]
[ext_resource path="res://nanogames/garden_thyme/_assets/darkning.png" type="Texture" id=7]
[ext_resource path="res://nanogames/garden_thyme/_assets/sunshine.png" type="Texture" id=8]
[ext_resource path="res://nanogames/garden_thyme/_assets/music.ogg" type="AudioStream" id=9]
[ext_resource path="res://nanogames/garden_thyme/_assets/birds.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=3]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Music:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground/Darkening:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "lose"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Music:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 0.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground/Darkening:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 1.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Music")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Foreground/Sunshine:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 1.0 ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Flowers" type="Node2D" parent="."]

[node name="Flower" parent="Flowers" instance=ExtResource( 3 )]

[node name="Flower2" parent="Flowers" instance=ExtResource( 3 )]

[node name="Flower3" parent="Flowers" instance=ExtResource( 3 )]

[node name="Flower4" parent="Flowers" instance=ExtResource( 3 )]

[node name="Flower5" parent="Flowers" instance=ExtResource( 3 )]

[node name="YSort" type="YSort" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Dog" parent="YSort" instance_placeholder="res://nanogames/garden_thyme/dog/dog.tscn"]

[node name="WateringCan" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 480, 640 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 480, 360 )
current = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
bus = "Music"

[node name="Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/lose = SubResource( 1 )
anims/win = SubResource( 2 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Grass" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Fence" type="TextureRect" parent="Background"]
anchor_right = 1.0
margin_top = -8.0
margin_bottom = 136.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecorationLeft" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -584.0
margin_top = 124.0
margin_right = -500.0
margin_bottom = -1.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecorationRight" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 500.0
margin_top = 124.0
margin_right = 584.0
texture = ExtResource( 6 )
stretch_mode = 2
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="Sunshine" type="TextureRect" parent="Foreground"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Darkening" type="NinePatchRect" parent="Foreground"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
draw_center = false
patch_margin_top = 240
patch_margin_bottom = 240
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Flowers/Flower" to="." method="_on_Flower_area_entered"]
[connection signal="area_entered" from="Flowers/Flower2" to="." method="_on_Flower_area_entered"]
[connection signal="area_entered" from="Flowers/Flower3" to="." method="_on_Flower_area_entered"]
[connection signal="area_entered" from="Flowers/Flower4" to="." method="_on_Flower_area_entered"]
[connection signal="area_entered" from="Flowers/Flower5" to="." method="_on_Flower_area_entered"]
